<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Json</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vista_individual">VISTA INDIVIDUAL</string>

    <string name="arete">No.Arete:</string>
    <string name="nac">F.Nac:</string>
    <string name="nom">Nombre:</string>
    <string name="sex">Sexo</string>
    <string name="ges">F. Gestacion</string>
    <string name="par">F.Parto</string>

</resources>
