<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_n_arete2"
        android:text="@string/arete"
        android:textColor="#ff3b3dff"
        android:textStyle="bold"/>

    <TextView
    android:layout_marginLeft="12dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/v_n_arete"
    android:text="@string/arete"
    android:textColor="#ff060618"
    android:textStyle="bold"/>



</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_f_naci2"
        android:text="@string/nac"
        android:textColor="#ff3b3dff"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_f_naci"
        android:text="@string/nac"
        android:textColor="#ff060618"
        android:textStyle="bold"/>



</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/v_nombre2"
            android:text="@string/nom"
            android:textColor="#ff3b3dff"
            android:textStyle="bold"/>

    <TextView
        android:layout_marginLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_nombre"
        android:text="@string/nom"
        android:textColor="#ff060618"
        android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/v_sexo"
            android:text="@string/sex"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/v_f_ges"
            android:text="@string/ges"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/v_f_parto"
            android:text="@string/par"
            android:visibility="invisible"/>

    </RelativeLayout>
</LinearLayout>
